--- a/.github/workflows/helm-start.yml
+++ b/.github/workflows/helm-start.yml
@@ -103,7 +103,7 @@ jobs:
       run: |
         helm install gateway ${{ env.HELM_CHART_PATH }}/infrastructure/helm \
           --set googleProject.name=${{ secrets.GC_PROJECT_ID }} \
-          --set productive=${{ inputs.productive }}
+          --set productive="${{ inputs.productive }}"
 
     - name: Create https certificates
       continue-on-error: true
@@ -122,7 +122,7 @@ jobs:
         helm install frontend ${{ env.HELM_CHART_PATH }}/frontend/helm \
           --set googleProject.name=${{ secrets.GC_PROJECT_ID }} \
           --set frontend.version=${{ inputs.frontend-version }} \
-          --set productive=${{ inputs.productive }}
+          --set productive="${{ inputs.productive }}"
       
     - name: Install Authentication
       continue-on-error: true
@@ -132,7 +132,7 @@ jobs:
           --set resources.bucket=${{ inputs.bucket }} \
           --set googleProject.name=${{ secrets.GC_PROJECT_ID }} \
           --set userTenantManagement.version=${{ inputs.user-tenant-management-version }} \
-          --set productive=${{ inputs.productive }}
+          --set productive="${{ inputs.productive }}"
 
     # Deploy the Docker image to the GKE cluster
     - name: Start backend for each tenant with helm
@@ -157,7 +157,7 @@ jobs:
             --set parkingGarages.version=${{ inputs.parking-garages-version }} \
             --set facilityManagement.version=${{ inputs.facility-management-version }} \
             --set defectManagement.version=${{ inputs.defect-management-version }} \
-            --set productive=${{ inputs.productive }} \
+            --set productive="${{ inputs.productive }}" \
             --set replicaCount=$replicas  \
             --set scaling.averageUtilization=$averageUtilization \
             --set scaling.maxReplicas=$maxReplicas \
@@ -218,19 +218,19 @@ jobs:
       run: |
         helm upgrade gateway ${{ env.HELM_CHART_PATH }}/infrastructure/helm \
           --set googleProject.name=${{ secrets.GC_PROJECT_ID }} \
-          --set productive=${{ inputs.productive }}
+          --set productive="${{ inputs.productive }}"
 
         helm upgrade frontend ${{ env.HELM_CHART_PATH }}/frontend/helm \
           --set googleProject.name=${{ secrets.GC_PROJECT_ID }} \
           --set frontend.version=${{ inputs.frontend-version }} \
-          --set productive=${{ inputs.productive }}
+          --set productive="${{ inputs.productive }}"
 
         helm upgrade authentication ${{ env.HELM_CHART_PATH }}/authentication/helm \
           --set resources.database=${{inputs.database}} \
           --set resources.bucket=${{ inputs.bucket }} \
           --set googleProject.name=${{ secrets.GC_PROJECT_ID }} \
           --set userTenantManagement.version=${{ inputs.user-tenant-management-version }} \
-          --set productive=${{ inputs.productive }}
+          --set productive="${{ inputs.productive }}"
 
         jq -c '.[]' tenants.json | while read -r entry; do
           tenant=$(echo "$entry" | jq -r '.name')
@@ -251,7 +251,7 @@ jobs:
             --set parkingGarages.version=${{ inputs.parking-garages-version }} \
             --set facilityManagement.version=${{ inputs.facility-management-version }} \
             --set defectManagement.version=${{ inputs.defect-management-version }} \
-            --set productive=${{ inputs.productive }} \
+            --set productive="${{ inputs.productive }}" \
             --set replicaCount=$replicas  \
             --set scaling.averageUtilization=$averageUtilization \
             --set scaling.maxReplicas=$maxReplicas \
