--- a/.github/workflows/helm-start.yml
+++ b/.github/workflows/helm-start.yml
@@ -223,9 +223,10 @@ jobs:
       run: 
         tenants=$(jq -r '.[].name' tenants.json)
         echo $tenants
+
         for tenant in $tenants; do
-          gcloud iam service-accounts keys create key-$tenant.json --iam-account=$tenant-sa@${{ secrets.GC_PROJECT_ID }}.iam.gserviceaccount.com
-          kubectl create secret generic gcp-sa-key --from-file=key.json=key-$tenant.json -n $tenant
+          gcloud iam service-accounts keys create "key-$tenant.json" --iam-account="$tenant-sa@${{ secrets.GC_PROJECT_ID }}.iam.gserviceaccount.com"
+          kubectl create secret generic gcp-sa-key --from-file=key.json="key-$tenant.json" -n $tenant
           echo $tenant
         done
 
