--- a/.github/workflows/helm-start.yml
+++ b/.github/workflows/helm-start.yml
@@ -220,15 +220,14 @@ jobs:
         kubectl create secret generic gcp-sa-key --from-file=key.json=key-frontend.json -n frontend
 
     - name: Get Keys for tenants
-      run: 
+      run: |
         tenants=$(jq -r '.[].name' tenants.json)
         echo $tenants
 
         for tenant in $tenants; do
-          echo key-${tenant}.json
-          gcloud iam service-accounts keys create key-${tenant}.json --iam-account=${tenant}-sa@${{ secrets.GC_PROJECT_ID }}.iam.gserviceaccount.com
-          kubectl create secret generic gcp-sa-key --from-file=key.json=key-${tenant}.json -n $tenant
-          echo $tenant
+          gcloud iam service-accounts keys create "key-${tenant}.json" --iam-account="${tenant}-sa@$GC_PROJECT_ID.iam.gserviceaccount.com"
+          kubectl create secret generic gcp-sa-key --from-file=key.json="key-${tenant}.json" -n "$tenant"
+          echo "Processed tenant: $tenant"
         done
 
     - name: Upgrade services
