Fix default bucket

--- a/.github/workflows/helm-upgrade.yml
+++ b/.github/workflows/helm-upgrade.yml
@@ -18,7 +18,7 @@ on:
       bucket:
         required: false
         type: string
-        default: msi-cad-vw-bucket
+        default: msi-cad-vw-storagebucket
       frontend-version:
         required: true
         type: string
