--- a/.github/workflows/helm-one-tenant.yml
+++ b/.github/workflows/helm-one-tenant.yml
@@ -25,7 +25,7 @@ on:
       bucket:
         required: false
         type: string
-        default: msi-cad-vw-bucket   
+        default: msi-cad-vw-storagebucket
       parking-garages-version:
         required: true
         type: string
