--- a/.github/workflows/helm-start.yml
+++ b/.github/workflows/helm-start.yml
@@ -13,7 +13,7 @@ on:
       bucket:
         required: false
         type: string
-        default: msi-cad-vw-bucket
+        default: msi-cad-vw-storagebucket
       productive:
         required: false
         type: boolean
