--- a/.github/workflows/helm-stop.yml
+++ b/.github/workflows/helm-stop.yml
@@ -13,7 +13,7 @@ on:
       bucket:
         required: false
         type: string
-        default: msi-cad-vw-bucket
+        default: msi-cad-vw-storagebucket
 
     secrets:
       GC_SERVICE_ACCOUNT:
