--- a/.github/workflows/helm-start.yml
+++ b/.github/workflows/helm-start.yml
@@ -241,8 +241,8 @@ jobs:
         tenants=$(jq -r '.[].name' tenants.json)
         echo $tenants
         for tenant in $tenants; do
-          for key in $(gcloud iam service-accounts keys list --iam-account $tenant-sa@${{ secrets.GC_PROJECT_ID }}.iam.gserviceaccount.com --format="value(KEY_ID)"); do
-            gcloud iam service-accounts keys delete $key --iam-account $tenant-sa@${{ secrets.GC_PROJECT_ID }}.iam.gserviceaccount.com --quiet
+          for key in $(gcloud iam service-accounts keys list --iam-account ${tenant:0:20}-sa@${{ secrets.GC_PROJECT_ID }}.iam.gserviceaccount.com --format="value(KEY_ID)"); do
+            gcloud iam service-accounts keys delete $key --iam-account ${tenant:0:20}-sa@${{ secrets.GC_PROJECT_ID }}.iam.gserviceaccount.com --quiet
           done
         done
 
@@ -265,8 +265,8 @@ jobs:
 
         for tenant in $tenants; do
           echo key-${tenant}.json
-          echo $tenant-sa@$GC_PROJECT_ID.iam.gserviceaccount.com
-          gcloud iam service-accounts keys create key-$tenant.json --iam-account=$tenant-sa@${{ secrets.GC_PROJECT_ID }}.iam.gserviceaccount.com
+          echo ${tenant:0:20}-sa@$GC_PROJECT_ID.iam.gserviceaccount.com
+          gcloud iam service-accounts keys create key-$tenant.json --iam-account=${tenant:0:20}-sa@${{ secrets.GC_PROJECT_ID }}.iam.gserviceaccount.com
           kubectl create secret generic gcp-sa-key --from-file=key.json="key-${tenant}.json" -n "$tenant"
           echo "Processed tenant: $tenant"
         done
